edit readme for Ubuntu